# Mixed-Integer-Optimization-for-Portfolio-Selection-using-ML-Driven-Heuristics

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  FINAL_DEPLOYMENT_STATUS.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  FUTURE_ENHANCEMENTS_PLAN.md  Makefile  PHASE10_SUMMARY.md  PHASE_1_IMPROVEMENTS.md  PHASE_2_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETE.md  PRODUCTION_READY_REPORT.md  PROJECT_EVALUATION.md  PROJECT_IMPROVEMENT_PLAN.md  Procfile  QUICKSTART.md  QUICK_DEPLOY.md  README.md  REAL_WORLD_INTEGRATION_STATUS.md  STREAMLIT_DEPLOYMENT_GUIDE.md  TESTING_SUMMARY.md  TEST_REPORT.md  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  validate_app.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  IMPLEMENTATION_COMPLETION_REPORT.md  PLAN.md  PROJECT_SUMMARY.md  RESULTS.md  USER_GUIDE.md
examples/: ib_integration_demo.py
notebooks/: portfolio_optimization_tutorial.ipynb
scripts/: benchmark_performance.py  compare_strategies.py  run_analysis.py
src/: __init__.py
src/accounts/: models.py
src/alerts/: __init__.py
src/api/: __init__.py  broker_integration.py  main.py  models.py
src/backtesting/: __init__.py  benchmarks.py  engine.py
src/data/: __init__.py  esg_scorer.py  loader.py  preprocessing.py  real_data_loader.py  websocket_stream.py
src/database/: schema.sql
src/forecasting/: __init__.py  black_litterman.py  covariance.py  factor_models.py  lstm_forecast.py  returns_forecast.py  transformer_forecast.py  volatility_forecast.py
src/heuristics/: __init__.py  clustering.py  constraint_predictor.py  genetic_algorithm.py  simulated_annealing.py
src/integrations/: __init__.py  broker_config.py  broker_interface.py  interactive_brokers.py
src/utils/: __init__.py  (+3 more)
tests/: __init__.py  test_advanced_features.py  test_dashboard.py  test_data_loader.py  test_deployment_readiness.py  test_forecasting.py  test_heuristics.py  test_integration_dashboard.py  test_optimization.py  test_phase10_features.py  test_streamlit_app.py  test_visualizations.py
(+18 files in other folders)
